// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utilities: ComponentPreview CodeFigure removes outer tags from component 1`] = `
<ComponentPreview
  codeFigure={true}
  language="html"
  removeOuterTag={true}
>
  <CodeFigure>
    <figure>
      <pre>
        <PrismCode
          className="language-html"
          component="code"
        >
          <code
            className="language-html"
          >
            &lt;h1&gt;test1&lt;/h1&gt;
&lt;h1&gt;test1&lt;/h1&gt;
          </code>
        </PrismCode>
      </pre>
    </figure>
  </CodeFigure>
</ComponentPreview>
`;

exports[`Utilities: ComponentPreview CodeFigure renders css string 1`] = `
<ComponentPreview
  codeFigure={true}
  language="css"
>
  <CodeFigure>
    <figure>
      <pre>
        <PrismCode
          className="language-css"
          component="code"
        >
          <code
            className="language-css"
          >
            color: red;
          </code>
        </PrismCode>
      </pre>
    </figure>
  </CodeFigure>
</ComponentPreview>
`;

exports[`Utilities: ComponentPreview CodeFigure renders multiple html tags 1`] = `
<ComponentPreview
  codeFigure={true}
  language="html"
>
  <CodeFigure>
    <figure>
      <pre>
        <PrismCode
          className="language-html"
          component="code"
        >
          <code
            className="language-html"
          >
            &lt;h1&gt;test1&lt;/h1&gt;
&lt;h2&gt;test2&lt;/h2&gt;
          </code>
        </PrismCode>
      </pre>
    </figure>
  </CodeFigure>
</ComponentPreview>
`;

exports[`Utilities: ComponentPreview CodeFigure renders multiple javascript strings 1`] = `
<ComponentPreview
  codeFigure={true}
  language="javascript"
>
  <CodeFigure>
    <figure>
      <pre>
        <PrismCode
          className="language-javascript"
          component="code"
        >
          <code
            className="language-javascript"
          >
            const a = 12;const b = 1;const c = a + b;
          </code>
        </PrismCode>
      </pre>
    </figure>
  </CodeFigure>
</ComponentPreview>
`;

exports[`Utilities: ComponentPreview CodeFigure warns about unhandled children 1`] = `
<ComponentPreview
  codeFigure={true}
  language="css"
>
  <CodeFigure>
    <figure>
      <pre>
        <PrismCode
          className="language-css"
          component="code"
        >
          <code
            className="language-css"
          />
        </PrismCode>
      </pre>
    </figure>
  </CodeFigure>
</ComponentPreview>
`;

exports[`Utilities: ComponentPreview does not render codeFigure when prop is false/not provided 1`] = `
<ComponentPreview
  language="html"
  showCasePanel={true}
>
  <ShowCasePanel>
    <div
      className="showcase-panel"
    >
      <TestComponentH1>
        <h1>
          test1
        </h1>
      </TestComponentH1>
    </div>
  </ShowCasePanel>
</ComponentPreview>
`;

exports[`Utilities: ComponentPreview does not render showCasePanel when prop is false/not provided 1`] = `
<ComponentPreview
  codeFigure={true}
  language="html"
>
  <CodeFigure>
    <figure>
      <pre>
        <PrismCode
          className="language-html"
          component="code"
        >
          <code
            className="language-html"
          >
            &lt;h1&gt;test1&lt;/h1&gt;
          </code>
        </PrismCode>
      </pre>
    </figure>
  </CodeFigure>
</ComponentPreview>
`;
